src/BookingService/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
        nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
    rules:
        - host: acme.com
          http:
            paths:
                - path: /api/Users
                  pathType: Prefix
                  backend:
                    service:
                        name: bookingservice-clusterip-srv
                        port:
                            number: 80
                - path: /api/Bookings
                  pathType: Prefix
                  backend:
                    service:
                        name: bookingservice-clusterip-srv
                        port:
                            number: 80
                - path: /api/Rooms
                  pathType: Prefix
                  backend:
                    service:
                        name: bookingservice-clusterip-srv
                        port:
                            number: 80
                - path: /notifications
                  pathType: Prefix
                  backend:
                    service:
                        name: bookingnotification-clusterip-srv
                        port:
                            number: 80
